@@ -1,5 +1,5 @@
 ;;;;;
-;;;;; $Id: edit-text.el,v 35.4 1991-09-15 16:58:50 linus Exp $
+;;;;; $Id: edit-text.el,v 35.5 1991-09-16 16:18:19 linus Exp $
 ;;;;; Copyright (C) 1991  Lysator Academic Computer Association.
 ;;;;;
 ;;;;; This file is part of the LysKOM server.
@@ -34,7 +34,7 @@
 
 (setq lyskom-clientversion-long 
       (concat lyskom-clientversion-long
-	      "$Id: edit-text.el,v 35.4 1991-09-15 16:58:50 linus Exp $\n"))
+	      "$Id: edit-text.el,v 35.5 1991-09-16 16:18:19 linus Exp $\n"))
 
 
 ;;;; ================================================================
@@ -469,7 +469,7 @@ to the text in BUFFER."
   (goto-char (point-min))
   (let ((result (cons 'MISC-LIST nil)))
     (while (and (< (point) (point-max))
-		(not (equal (elt lyskom-header-subject 0)
+		(not (equal (char-to-string (elt lyskom-header-subject 0))
 			    (buffer-substring (point) (1+ (point))))))
       (let ((char (string-to-char
 		   (upcase (buffer-substring (point) (1+ (point)))))))
